# TecnoMundo_ETL_pipeline

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
conf/env/: .env
data/raw/: Category.xlsx
lambda_functions/: package_all.ps1  package_all.py
lambda_functions/bronze_ingestion/: lambda_function.py  package.sh  requirements.txt
lambda_functions/gold_enrichment/: lambda_function.py  package.sh
lambda_functions/silver_transformation/: lambda_function.py  package.sh
notebooks/databricks/development/1_ingestion/: 1_1_ingest_raw_sales.py
notebooks/databricks/production/1_ingestion/: 1_1_ingest_raw_sales.ipynb  1_2_ingest_raw_stock.ipynb
notebooks/databricks/production/2_transformation/: 2_1_clean_and_transform_sales.ipynb  2_2_clean_and_transform_sales.ipynb  2_2_clean_transform_stock.ipynb
notebooks/jupyters/data_quality_analysis/: DQ_unmatched_products_analysis.ipynb
reports/: filas_problematicas_reporte_de_ventas_por_articulos_2_20250707_205406.xlsx  reporte_columnas_reporte_de_ventas_por_articulos_2_20250707_205406.txt
scripts/: cargar_dimensiones.py  consultar_gold_layer.py  deploy_lambdas.py  optimize_lambda_package.py  verificar_carga.py  verificar_credenciales.py
src/tecno_etl/extractors/: local_file_extractor.py
src/tecno_etl/loaders/: databricks_table_loader.py
src/tecno_etl/pipelines/: cargar_dimensiones.py  invoke_aws_pipeline.py  run_dimension_update.py  run_local_ingestion.py  run_stock_ingestion.py
src/tecno_etl/transformers/: Data_cleaner.py  data_normalizer.py
src/tecno_etl/utils/: databricks_connector.py  estructura_proyecto.txt  logger.py  print_directory.py
src/tecno_etl/validators/: __init__.py  schemas.py
tests/unit/: test_data_normalizer.py  test_local_file_extractor.py
(+5 files in other folders)
